Fix bug with add-icon's z-index

--- a/src/app/content/topbar/topbar.css
+++ b/src/app/content/topbar/topbar.css
@@ -1,9 +1,10 @@
-
 .top-bar-wrapper {
+    z-index: 2;
     height: 64px;
     width: 100%;
     position: fixed;
     background: var(--primary-color);
+    opacity: 0.99;
 }
 
 .top-bar {
